[gd_scene load_steps=4 format=3 uid="uid://chtm7kcr0w04x"]

[ext_resource type="Script" path="res://scenes/managers/shoppe_furniture_handler.gd" id="1_lbura"]
[ext_resource type="Script" path="res://scenes/managers/equipped_item_manager/equipped_item_manager.gd" id="1_sgwao"]
[ext_resource type="Script" path="res://scenes/managers/shoppe_item_handler.gd" id="3_5701j"]

[node name="EquippedItemManager" type="Node" node_paths=PackedStringArray("shoppe_furniture_handler", "shoppe_item_handler")]
script = ExtResource("1_sgwao")
shoppe_furniture_handler = NodePath("ShoppeFurnitureHandler")
shoppe_item_handler = NodePath("ShoppeItemHandler")

[node name="ShoppeFurnitureHandler" type="Node" parent="."]
script = ExtResource("1_lbura")

[node name="ShoppeItemHandler" type="Node" parent="."]
script = ExtResource("3_5701j")
